# done

./: com.github.oowoosh0.done.Devel.yml  com.github.oowoosh0.done.yml  meson.build
src/: Application.vala  meson.build
src/Models/: Task.vala
src/Views/: MainWindow.vala  Sidebar.vala  SidebarItem.vala  TaskRow.vala
