sources = [
    'Application.vala',
    'Views/MainWindow.vala',
    'Views/Sidebar.vala',
    'Views/SidebarItem.vala',
    'Views/TaskRow.vala',
#    'Views/TaskJournalMenu.vala',
    'Models/Task.vala',
#    'Models/TaskJournal.vala'
]

executable(
    meson.project_name(),
    sources,
    conf_file,
    dependencies: dependencies,
    install: true
)
